# shuiyuan-archiver

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  bacon.toml  build.rs  makefile  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: package.yml  publish-cli.yml  publish-gui.yml  publish.yml  release.yml  test.yml
cli/: Cargo.toml
cli/src/: archive.rs  args.rs  auth.rs  main.rs
core/: Cargo.toml  bacon.toml
core/src/: archiver.rs  atomic_file.rs  client.rs  error.rs  lib.rs  middleware.rs  models.rs  preloaded_store.rs  shared_promise.rs
core/src/archiver/: anonymous.rs  download_manager.rs  fetchers.rs  template.rs  utils.rs
core/templates/resources/: desktop_theme_3_8828b367cb8a28b2296c7bfe6f433ad504773044.css
gui/src/: App.tsx  bindings.ts  commands.ts  index.html  states.ts
gui/src-tauri/: .gitignore  Cargo.toml  Info.plist  bacon.toml  tauri.conf.json
gui/src-tauri/src/: main.rs  url_scheme.rs
gui/src/steps/: Archive.tsx  Config.tsx  Finish.tsx  Login.tsx
src/: App.tsx  Main.tsx  archiver.rs  client.rs  future_queue.rs  index.tsx  main.rs  middleware.rs  models.rs  rate_limit.rs  store.rs
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: action_code.rs  archiver.rs  client.rs  error.rs  future_queue.rs  main.rs  middleware.rs  models.rs  preloaded_store.rs  rate_limit.rs  retained_promise.rs  shared_promise.rs  store.rs
src-tauri/templates/: index.hbs
src-tauri/templates/resources/: desktop_theme_54_e006d487a3f75a32724103e42208dca26c361ac8.css  desktop_theme_59_0cc413d2f69104e201591ee89508c6059f2237e7.css
src/steps/: Archive.tsx  Config.tsx  Login.tsx
templates/resources/: desktop_a6ebc8d83f637bb00f4f3fe2bed708de5b2f46cb.css  desktop_theme_18_6044d2798548d883edb7b504e9678e59bef1ea37.css  desktop_theme_34_b6cc8e9ec8740a61600e8db01d7b9428a3940549.css  desktop_theme_37_127867e7b59b2a0102d5189a36d24792f6a176f0.css  desktop_theme_52_4859297324a16e5bb8c1f9d01f3bf0ffa6a9b29c.css  desktop_theme_56_ecee7c2e40c9669a25d0f4e842a1b86202e00733.css  desktop_theme_58_c33a83ba3ef5ab3b25e5a5619c4161eb0f495dce.css
ui/: mainwindow.slint
