[package]
name = "shuiyuan-archiver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true

[package.metadata.bundle]
name = "水源社区存档工具"
identifier = "me.lightquantum.shuiyuan-archiver"
icon = "128x128.ico"

[dependencies]
reqwest = { version = "0.11", features = ["multipart", "json", "cookies"] }
futures = "0.3"
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1.17", features = ["full"] }
eyre = "0.6"
serde_json = "1.0"
regex = "1.5"
parking_lot = "0.12"
once_cell = "1.10"
color-eyre = "0.6"
slint = "0.2"
rfd = "0.8"

[build-dependencies]
slint-build = "0.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"