[package]
name = "shuiyuan-archiver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = "debuginfo"
lto = true

[package.metadata.bundle]
name = "水源社区存档工具"
identifier = "me.lightquantum.shuiyuan-archiver"
icon = "128x128.ico"

[dependencies]
eyre = "0.6"
futures = "0.3"
once_cell = "1.10"
parking_lot = "0.12"
regex = "1.5"
reqwest = { version = "0.11", features = ["multipart", "json", "cookies"] }
rfd = "0.8"
serde_json = "1.0"
slint = "0.2"
tokio = { version = "1.17", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
slint-build = "0.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
