[package]
name = "shuiyuan-archiver"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = "debuginfo"
lto = true

[profile.dev.package.num-bigint-dig]
opt-level = 3

[dependencies]
async-trait = "0.1"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
directories = "4.0"
eyre = "0.6"
fake = "2.4"
flate2 = "1.0"
futures = "0.3"
handlebars = "4.2"
itertools = "0.10"
once_cell = "1.10"
parking_lot = "0.12"
rand = "0.8"
regex = "1.5"
reqwest = { version = "0.11", features = ["multipart", "json", "cookies"] }
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
rfd = "0.8"
rsa = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
slint = "0.2"
tar = "0.4"
task-local-extensions = "0.1"
tokio = { version = "1.17", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "0.8", features = ["v4"] }
webbrowser = "0.6"

[build-dependencies]
slint-build = "0.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
