[package]
name = "cli"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17"
sa_core = { path = "../core" }
tokio = { version = "1.17", features = ["rt", "sync", "time", "macros", "rt-multi-thread", "parking_lot"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.1", features = ["derive"] }
once_cell = "1.17"
regex = "1.7"
webbrowser = "0.8"
rand = "0.8"
dialoguer = "0.10"
tap = "1.0"
anyhow = "1.0"
console = "0.15"