[package]
name = "shuiyuan-archiver-cli"
version = "0.1.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
console = "0.15"
dialoguer = "0.10"
indicatif = "0.17"
once_cell = "1.17"
rand = "0.8"
regex = "1.7"
sa_core = { path = "../core" }
sanitize-filename = "0.4"
tap = "1.0"
tokio = { version = "1.17", features = ["rt", "sync", "time", "macros", "rt-multi-thread", "parking_lot"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webbrowser = "0.8"
