[package]
name = "shuiyuan-archiver"
description = "一个将上海交通大学水源社区的文章存档的工具"
authors = ["LightQuantum <self@lightquantum.me>"]
version = "0.3.9"
edition = "2021"
build = "build.rs"
repository = "https://github.com/PhotonQuantum/shuiyuan-archiver"

[dependencies]
directories = "4.0"
rand = "0.8"
sentry = "0.29"
tauri = { version = "1.0", features = ["dialog"] }
tokio = { version = "1.17", features = ["rt", "sync", "time", "macros"] }
webbrowser = "0.8"
serde_json = "1.0"
sa_core = { path = "../../core" }
once_cell = "1.17"
tracing-subscriber = { version = "0.3", features= ["env-filter"] }

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
