[package]
name = "shuiyuan-archiver"
description = "一个将上海交通大学水源社区的文章存档的工具"
authors = ["LightQuantum <self@lightquantum.me>"]
version = "0.4.1"
edition = "2021"
build = "build.rs"
repository = "https://github.com/PhotonQuantum/shuiyuan-archiver"

[dependencies]
directories = "4.0"
once_cell = "1.17"
rand = "0.8"
sa_core = { path = "../../core" }
sentry = { version = "0.30", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
tap = "1.0"
tauri = { version = "1.0", features = ["dialog-open", "fs-exists", "fs-read-dir", "path-all", "shell-open"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tokio = { version = "1.24", features = ["sync"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webbrowser = "0.8"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
