[package]
name = "shuiyuan-archiver"
description = "一个将上海交通大学水源社区的文章存档的工具"
authors = ["LightQuantum <self@lightquantum.me>"]
version = "0.4.5"
edition = "2021"
build = "build.rs"
repository = "https://github.com/PhotonQuantum/shuiyuan-archiver"

[dependencies]
directories = "5.0"
once_cell = "1.17"
rand = "0.8"
regex = "1.7"
sa_core = { path = "../../core" }
sanitize-filename = "0.4"
sentry = { version = "0.31", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
tap = "1.0"
tauri = { version = "1.3", features = ["dialog-open", "fs-exists", "fs-read-dir", "path-all", "shell-open"] }
tauri-plugin-deep-link = "0.1"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tokio = { version = "1.24", features = ["sync"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
webbrowser = "0.8"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
